# Taxi-Center

./: BFS.cpp  BFS.h  CMakeLists.txt  Cab.cpp  Cab.h  Client.cpp  ClientMain.cpp  Color.h  Driver.cpp  Driver.h  Grid.cpp  Grid.h  Listener.cpp  LuxuryCab.cpp  LuxuryCab.h  Manufacturer.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  Passenger.cpp  Passenger.h  Point.cpp  Point.h  Server.cpp  Server.h  ServerMain.cpp  Socket.h  StandardCab.cpp  StandardCab.h  Status.h  TaxiCenter.cpp  TaxiCenter.h  Tcp.cpp  Tcp.h  TestBFS.cpp  TestGrid.cpp  TestMatrix.cpp  TestNode.cpp  TestPassenger.cpp  (+10 more)
lib/googletest-master/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-master/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/googletest-master/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
sockets/: Socket.h  Tcp.cpp  Tcp.h
src/: BFS.cpp  BFS.h  Cab.cpp  Cab.h  Checker.cpp  Checker.h  Client.cpp  Client.h  ClientMain.cpp  Driver.cpp  Driver.h  Grid.cpp  Grid.h  Job.cpp  Listener.h  LuxuryCab.cpp  LuxuryCab.h  Matrix.cpp  Matrix.h  Node.cpp  Node.h  Notifier.cpp  Notifier.h  Passenger.cpp  Passenger.h  Point.cpp  Point.h  Server.h  ServerMain.cpp  StandardCab.cpp  StandardCab.h  TaxiCenter.cpp  TaxiCenter.h  ThreadManagement.cpp  ThreadManagement.h  ThreadPool.cpp  ThreadPool.h  TransportationFlow.cpp  TransportationFlow.h  Trip.cpp  (+1 more)
tests/: TestBFS.cpp  TestDriver.cpp  TestGrid.cpp  TestLuxuryCab.cpp  TestMatrix.cpp  TestNode.cpp  TestPassenger.cpp  TestPoint.cpp  TestStandardCab.cpp  TestTaxiCenter.cpp  TestTransportationFlow.cpp  TestTrip.cpp
